5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4194/executions/1646_2729.log
== TEST (2019-04-23 17:51:42) 
-- CODE:
n1 = int(input("N1: "))
n2 = int(input("N2: "))

produto = n1 * n2
diferenca = n2 - n1

if(produto == produto%2=0 ):
	print(n1 + n2)
else:
	print(diferenca)
-- ERROR:
File "XXXX", line 7
    if(produto == produto%2=0 ):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:52:22) 
-- CODE:
n1 = int(input("N1: "))
n2 = int(input("N2: "))

produto = n1 * n2
diferenca = n2 - n1

if(produto == (produto % 2 = 0) ):
	print(n1 + n2)
else:
	print(diferenca)
-- ERROR:
File "XXXX", line 7
    if(produto == (produto % 2 = 0) ):
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 17:52:29) 
-- CODE:
n1 = int(input("N1: "))
n2 = int(input("N2: "))

produto = n1 * n2
diferenca = n2 - n1

if(produto == produto % 2  ):
	print(n1 + n2)
else:
	print(diferenca)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-23 17:52:37) 
-- CODE:
n1 = int(input("N1: "))
n2 = int(input("N2: "))

produto = n1 * n2
diferenca = n2 - n1

if(produto == produto % 2  ):
	print(n1 + n2)
else:
	print(diferenca)
-- EXECUTION TIME:
0.153879
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
1
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
